force-app/main/default/objects/VersaPay_Product_Payment__c/VersaPay_Product_Payment__c.object-meta.xml
<CustomObject>
    <description>Product Payment</description>
    <label>Product Payment</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>VersaPay Product Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>