force-app/main/default/objects/VersaPay_Product_Payment__c/fields/Last_State_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_State_Changed_Date__c</fullName>
    <description>Last State changed DateTime</description>
    <label>Last State Changed Date</label>
    <type>DateTime</type>
</CustomField>