force-app/main/default/objects/VersaPay_Product_Payment__c/fields/NSF_Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>NSF_Fee_Status__c</fullName>
    <label>NSF Fee Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>