force-app/main/default/objects/VersaPay_Product_Payment__c/fields/Posted_To_MegaSys__c.field-meta.xml
<CustomField>
    <fullName>Posted_To_MegaSys__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Posted To MegaSys</label>
    <type>Checkbox</type>
</CustomField>