force-app/main/default/objects/VersaPay_Product_Payment__c/fields/Process_On__c.field-meta.xml
<CustomField>
    <fullName>Process_On__c</fullName>
    <description>Effective Payment Date</description>
    <label>Process On</label>
    <type>Date</type>
</CustomField>