force-app/main/default/objects/VersaPay_Product_Payment__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipName>VersaPay_Product_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>