force-app/main/default/objects/VersaPay_Product_Payment__c/fields/VersaPay_From_Fund_Token__c.field-meta.xml
<CustomField>
    <fullName>VersaPay_From_Fund_Token__c</fullName>
    <description>Target fund identifier</description>
    <label>VersaPay From Fund Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>