force-app/main/default/objects/VersaPay_Product_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Product__c</columns>
    <columns>VersaPay_Token_Number__c</columns>
    <columns>VersaPay_State__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>