force-app/main/default/objects/VersaPay_Product_Payment__c/listViews/Errored_Payments.listView-meta.xml
<ListView>
    <fullName>Errored_Payments</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>VersaPay_State__c</columns>
    <columns>VersaPay_Payment_Error__c</columns>
    <columns>Last_State_Changed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VersaPay_State__c</field>
        <operation>notEqual</operation>
        <value>new,completed,completed_but_nsfed,nsfed,in_progress</value>
    </filters>
    <label>Errored Payments</label>
</ListView>