force-app/main/default/objects/VersaPay_Product_Payment__c/listViews/Payments_by_Account.listView-meta.xml
<ListView>
    <fullName>Payments_by_Account</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>VersaPay_State__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Last_State_Changed_Date__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>MegaSys_Export_Date__c</columns>
    <columns>Posted_To_MegaSys__c</columns>
    <filterScope>Everything</filterScope>
    <label>Payments by Account</label>
</ListView>